Add task_for_leture3, implement timer and include InitMatrix function

--- a/IPS_Lab_2/IPS_Lab_2/IPS_Lab_2.vcxproj.filters
+++ b/IPS_Lab_2/IPS_Lab_2/IPS_Lab_2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\Антоша\Downloads\task_for_lecture3.cpp">
+    <ClCompile Include="task_for_lecture3.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
