--- a/IPS_Lab_2/IPS_Lab_2/IPS_Lab_2.vcxproj
+++ b/IPS_Lab_2/IPS_Lab_2/IPS_Lab_2.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="task_for_lecture3.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E8F92441-BF9D-41E3-87DB-1C49AFC2FF06}</ProjectGuid>
     <RootNamespace>IPS_Lab_2</RootNamespace>
@@ -117,9 +120,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="C:\Users\Антоша\Downloads\task_for_lecture3.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
